# bicimad-demand-predictor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml  deploy-airflow.yml  deploy-training.yml
dags/: daily_monitoring_dag.py  ingestion_dag.py  training_dag.py
docs/: bicimad_ml_design_doc.docx  documentacion.md  knowledge_base.md  mejoras.txt  pasos.md  runbook.md  session_handoff.md  todo.txt  todos.txt
infra/: Dockerfile.airflow  Dockerfile.mlflow  airflow.env.example  docker-compose.mlflow.yml  docker-compose.yml  mlflow.env.example
infra/bq_views/: v_online_mae.sql
infra/postgres-init/: 01_mlflow.sql
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/training/: Dockerfile
notebooks/: 01_eda_features.ipynb  02_first_model.ipynb
src/common/: config.py  logging_setup.py  schemas.py
src/features/: build_dataset.py  build_features.py  feature_definitions.py  holidays.py
src/ingestion/: bicimad_client.py  main.py  storage.py  weather_client.py
src/monitoring/: alerts.py  daily_metrics.py  dashboard.py  drift_report.py  reconcile.py
src/serving/: Dockerfile  app.py  predict.py
src/training/: baseline.py  evaluate.py  registry.py  split.py  train.py
tests/: conftest.py
tests/test_common/: test_schemas.py
tests/test_features/: conftest.py  test_build_features.py  test_feature_definitions.py  test_holidays.py
tests/test_ingestion/: test_bicimad_client.py  test_storage.py  test_weather_client.py
tests/test_monitoring/: test_alerts.py  test_daily_metrics.py  test_reconcile.py
tests/test_serving/: test_app.py  test_predict.py
tests/test_training/: conftest.py  test_evaluate.py  test_registry.py  test_split.py  test_train.py
