[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bicimad-demand-predictor"
version = "0.1.0"
description = "Batch ML system to predict BiciMAD station availability"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "python-dateutil>=2.8",
    "polars>=0.19",
    "holidays>=0.45",
]

[project.optional-dependencies]
ingestion = [
    "google-cloud-storage>=2.10",
    "google-cloud-bigquery>=3.11",
    "google-cloud-secret-manager>=2.16",
]
features = ["pandas>=2.1", "db-dtypes>=1.1"]
training = [
    "lightgbm>=4.1",
    "optuna>=3.4",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "mlflow==3.11.1",
]
serving = ["fastapi>=0.104", "uvicorn[standard]>=0.24"]
monitoring = ["evidently>=0.7"]
notebooks = ["numpy>=1.26", "jupyter>=1.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
    "pre-commit>=3.5",
    "types-requests>=2.31",
    "types-python-dateutil>=2.8",
]
all = [
    "bicimad-demand-predictor[ingestion,features,training,serving,monitoring,notebooks,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",
    "N802",
    "N803",
    "N806",
] # N80x: uppercase X/function names are ML convention

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.serving.app"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = "-v --tb=short"
